# arifsolmaz.github.io

./: .gitignore  01_introduction.ipynb  LICENSE  README.md  _config.yml  about.html  admin.html  contact.html  courses.html  cv.tex  demo.html  index.html  index.md  meteor.html  news.csv  news.html  projects.html  publications.json  publications_en_orcid_top3.md  publications_tr_orcid.md  publications_tr_orcid_top3.md  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  streamlit_app.py  streamlit_app2.py  streamlit_app3.py
.github/workflows/: compile-cv.yml  daily-idea.yml  generate-turkish-news.yml  orcid-publications.yml  post-bluesky.yml  test-bsky.yml  test-format.yml  test-tweet.yml  tests.yml  tweet-paper.yml  update-papers.yml
_data/: authors.yml  navigation.yml
_includes/: author-profile-custom.html  publications_en_orcid.md  publications_en_orcid_top3.md  publications_tr_orcid.md  publications_tr_orcid_top3.md
_includes/_includes/: masthead.html
arxiv/: README.md  feed.xml  index.html  quick_fix_abstracts.py  regenerate_summaries.py  test_local.py
arxiv/data/: arxiv_news.json  bluesky_posted.json  papers.json  tweeted.json  twitter_posted.json
arxiv/data/archive/: 2026-01-15.json  2026-01-16.json  2026-01-19.json  2026-01-20.json  2026-01-21.json  2026-01-22.json  2026-01-23.json  2026-01-26.json  2026-01-27.json  2026-01-28.json  2026-01-29.json  2026-01-30.json  2026-02-02.json  2026-02-03.json  2026-02-04.json  (+98 more)
arxiv/scripts/: archive_papers.py  arxiv_debug.html  backfill_date.py  debug_arxiv.py  fetch_papers.py  generate_rss.py  generate_turkish_news.py  post_bluesky.py  post_twitter.py  split_archive.py  test_figure_fetch.py
compiler/: index.html
css/: styles.css
daily-idea/: fragment.html  state.json  widget.css  widget.html
data/: projects.json
en/: index.md
en/publications/: index.md
en/research/: index.html  index.md
en/teaching/: index.md
exospot_analyzer/: cli.py  io.py  preprocess.py
ideas/: exoplanet-project-ideas-2026-03-08.md  exoplanet_project_ideas.md  exoplanet_project_ideas_2026-03-09.md  exoplanet_project_ideas_2026-03-10.md  exoplanet_project_ideas_2026-03-12.md  exoplanet_project_ideas_2026-03-14.md  exoplanet_project_ideas_2026-03-25.md  exoplanet_project_ideas_2026-03-26.md  exoplanet_project_ideas_2026-03-31.md  exoplanet_project_ideas_2026-04-01.md  exoplanet_project_ideas_2026-04-02.md  exoplanet_project_ideas_2026-04-06.md  exoplanet_project_ideas_2026-04-07.md  exoplanet_project_ideas_2026-04-08.md  exoplanet_project_ideas_2026-04-23.md  exoplanet_project_ideas_2026-04-29.md  exoplanet_project_ideas_2026-05-04.md  exoplanet_project_ideas_2026-05-06.md  exoplanet_project_ideas_2026-05-08.md  exoplanet_project_ideas_2026-05-11.md  exoplanet_project_ideas_2026-05-12.md  exoplanet_project_ideas_2026-05-18.md
js/: script.js
lang/: en.json  tr.json
scripts/: parse_ideas.py  tess_transit_pipeline.py  update_widget.py
spotlightcurve/: __init__.py  api.py  cli.py  core.py  diagnostics.py  model.py  preprocess.py  pyproject.toml
spotlightcurve/backends/: __init__.py  numpyro_backend.py  pymc_backend.py
spotlightcurve/io/: __init__.py  tess.py
spotlightcurve/model/: __init__.py  compare.py  gp.py  spot.py
spotlightcurve/report/: __init__.py  html.py
spotlightcurve/report/templates/: report.html.j2
spotlightcurve/sim/: __init__.py  inject.py
spotlightcurve/spotlightcurve.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
spotlightcurve/tests/: test_core.py  test_model.py  test_preprocess.py
tests/: test_compare_models.py  test_sim_inject.py  test_tess.py
tr/: index.html  index.md
tr/arastirma/: index.html  index.md
tr/dersler/: index.md
tr/yayinlar/: index.md
tutorials/: spotlightcurve_colab.ipynb  spotlightcurve_colab.md  spotlightcurve_colab_updated.ipynb
(+4 files in other folders)
