[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotlightcurve"
version = "0.1.0"
description = "A light-curve analysis and starspot modeling toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Arif Solmaz" }]
keywords = ["exoplanet", "light curve", "starspot", "astrophysics", "TESS"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy"
]

dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "astropy",
  "tqdm"
]

[project.urls]
Homepage = "https://github.com/ArifSolmaz/arifsolmaz.github.io"
Issues = "https://github.com/ArifSolmaz/arifsolmaz.github.io/issues"

[tool.setuptools]
packages = ["spotlightcurve"]
include-package-data = true
