[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotlightcurve"
version = "0.0.1"
description = "Spot + transit light-curve utilities"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Arif Solmaz" }]

# core runtime deps (adjust as you like)
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.0"
]

[project.optional-dependencies]
pymc = [
  "pymc>=5",
  "arviz>=0.16"
]

# NEW:
jax = [
  "jax>=0.4.30",
  # Use jaxlib on everything except Apple Silicon;
  # Apple Silicon uses jax-metal instead.
  "jaxlib>=0.4.30; platform_system!='Darwin' or platform_machine!='arm64'",
  "jax-metal>=0.0.7; platform_system=='Darwin' and platform_machine=='arm64'",
]

[tool.setuptools.packages.find]
# package code should be in spotlightcurve/ (with __init__.py)
include = ["spotlightcurve*"]
